<resources>
    <string name="app_name">Stock</string>
    <string name="Title">Stock System</string>
    <string name="TitleResult">Result</string>
    <string name="btn_search">Stock inquiry</string>
    <string name="btn_add">Add Stock</string>
    <string name="btn_delete">Delete Stock</string>
    <string name="btn_return">return</string>
    <string name="TitleImage" translatable="false">image</string>
    <string name="btn_returnP">return previous</string>
    <string name="TitleAdd">Add Stock</string>
    <string name="TextCode">Please input the stock code:</string>
    <string name="btn_submit">submit</string>
    <string name="TitleDelete">Delete Stock</string>
    <string name="hint">input elements</string>
    <string name="nodata" translatable="false">No Data</string>
    <string name="StockName">StockName</string>
    <string name="StockPrice">StockPrice</string>
    <string name="btn_deleteAll">delete all</string>
    <string name="btn_result">show result</string>
    <string name="menu_exit">exit</string>
    <string name="txtSH">上证指数</string>
    <string name="txtSZ">深证成指</string>
    <string name="txtCY">创业板指</string>
</resources>