<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeleteActivity">

    <TextView
        android:id="@+id/TitleDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/TitleDelete"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTitle1"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/StockName"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textPrice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/StockPrice"
                android:textSize="25sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:textSize="12sp">

        </ListView>

        <TextView
            android:id="@+id/nodata1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/nodata"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_deleteAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_circle_shape_green"
            android:gravity="center"
            android:onClick="Delete"
            android:text="@string/btn_deleteAll"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_return3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_circle_shape_green"
            android:gravity="center"
            android:onClick="Delete"
            android:text="@string/btn_return"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>